--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ h4 {
 }
 
 .indifferent {
-  border: 1px solid #ffff44;
-  box-shadow:  -1px 1px #ffff44, -2px 2px #ffff44, -3px 3px #ffff44, -4px 4px #ffff44, -5px 5px #ffff44;
+  border: 1px solid #aaa922;
+  box-shadow:  -1px 1px #aaa922, -2px 2px #aaa922, -3px 3px #aaa922, -4px 4px #aaa922, -5px 5px #aaa922;
   background-color: #dddd22;
 }
 
