--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h4 {
   display: inline-block;
   padding: 5px;
   margin: 20px 0 0 0;
-  background: linear-gradient(to right, #fff, #000);
+  background: linear-gradient(right, #fff, #000);
 }
 
 .amiable {
