--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,10 @@ h4 {
   display: inline-block;
   padding: 5px;
   margin: 20px 0 0 0;
-  background: linear-gradient(to right, #fff, #000);
+}
+
+h4 .amiable {
+    background: linear-gradient(to right, #22aa44, #44cc66);
 }
 
 .amiable {
