--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ h4.amiable {
 
 }
 
+h4.amiable {
+    background: linear-gradient(to right, #aaa922, #dddd22);
+}
+
 .indifferent {
   border: 1px solid #aaa922;
   box-shadow:  -1px 1px #aaa922, -2px 2px #aaa922, -3px 3px #aaa922, -4px 4px #aaa922, -5px 5px #aaa922;
